--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write src/**/*.{ts,tsx,scss}",
+    "lint": "eslint './src/**/*.{ts,tsx}' --max-warnings=0"
   },
   "eslintConfig": {
     "extends": [
